2001-02-05  Jim Meyering  <meyering@lucent.com>

	* acspecific.m4 (AC_SYS_LARGEFILE): Add ULL suffix to the
	integer constants.

2001-02-05  Akim Demaille  <akim@epita.fr>

	acfunctions.m4 was still using the old AC_LIBOBJ_DECL.
	Reported by Derek R. Price.

	* tests/semantics.at (AC_REPLACE_FUNCS): New test.
	* acfunctions.m4 (AC_REPLACE_FUNCS, _AC_LIBOBJ_ALLOCA): Use
	AC_LIBSOURCES.

2001-02-03  Pavel Roskin  <proski@gnu.org>

	* tests/base.at (AC_TRY_COMMAND): Add a colon between "then" and
	"else". Separate commands inside AC_TRY_COMMAND with semicolons.
	From Nicolas Joly.

2001-02-03  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_INIT_LOG_COMPLETE): Removed, dead code.

2001-02-03  Akim Demaille  <akim@epita.fr>

	* acfunctions.m4 (AC_FUNC_ERROR_AT_LINE, AC_FUNC_OBSTACK): Use
	AC_LIBSOURCES.

2001-02-03  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_LIBOBJ_DECL): Remove.
	(AC_LIBSOURCES, AC_LIBSOURCE): New.

2001-02-02  Akim Demaille  <akim@epita.fr>

	* tests/base.at (AC_TRY_COMMAND): Fix the test.
	From Nicolas Joly.

	The following patch went into Autoconf between the two previous
	entries:

	* acgeneral.m4 (AC_TRY_COMMAND): Use the old code, using a tmp
	variable, to recover multiline robustness.
	Reported by Tim Van Holder.
	* tests/base.at (AC_TRY_COMMAND): New.

2001-02-02  Pavel Roskin  <proski@gnu.org>

	* acgeneral.m4 (_AC_COMPUTE_INT_COMPILE): Rename all occurences
	of ac_try to ac_mid to avoid a name clash.

2001-02-02  Pavel Roskin  <proski@gnu.org>

	* autoscan.pl (scan_c_file): When in verbose mode, don't print
	out hashes common for the whole package. Do it in scan_files()
	instead.
	(scan_makefile): Likewise.
	(scan_sh_file): Likewise.
	Thanks to Jim Meyering for improved implementation.

2001-02-01  Pavel Roskin  <proski@gnu.org>

	* autoreconf.sh: Fix the case when the verbose output was not
	redirected to stderr as everywhere else.

2001-01-30  Ralf Corsepius <corsepiu@faw.uni-ulm.de>
