@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.24.
-.TH AUTOHEADER "1" "January 2001" "GNU Autoconf 2.49d" FSF
+.TH AUTOHEADER "1" "February 2001" "GNU Autoconf 2.49d" FSF
 .SH NAME
 autoheader \- Create a template header for configure
 .SH SYNOPSIS
@@ -50,7 +50,7 @@ location of `aclocal.m4' and `acconfig.h'
 .SH AUTHOR
 Written by Roland McGrath.
 .PP
-Copyright 1992, 1993, 1994, 1996, 1998, 1999, 2000
+Copyright 1992, 1993, 1994, 1996, 1998, 1999, 2000, 2001
 Free Software Foundation, Inc.
 This is free software; see the source for copying conditions.  There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
