@@ -1,3 +1,8 @@
+2001-02-05  Derek Price  <derek.price@openavenue.com>
+
+	* autoheader.sh: Only set config_h for the first call to
+	AC_CONFIG_HEADERS.
+
 2001-02-05  Jim Meyering  <meyering@lucent.com>
 
 	* acspecific.m4 (AC_SYS_LARGEFILE): Add ULL suffix to the
